--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
